--- a/themes/terminal/layouts/_default/baseof.html
+++ b/themes/terminal/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
   {{ partial "header.html" . }}
 
   <div class="content">
+    <p><a href="../{{ .File.LogicalName }}-clearsign.txt">PGP Signature of this page</a></p>
     {{ block "main" . }}
     {{ end }}
   </div>
