--- a/themes/terminal/assets/css/main.scss
+++ b/themes/terminal/assets/css/main.scss
@@ -362,3 +362,9 @@ hr {
 sup {
  line-height: 0;
 }
+
+h2.section-title {
+ font-size: 2.25rem;
+ text-decoration: underline;
+ margin-top: 4rem;
+}
