--- a/themes/terminal/assets/css/main.scss
+++ b/themes/terminal/assets/css/main.scss
@@ -187,10 +187,9 @@ pre {
 }
 
 blockquote {
-  border-top: 1px solid $accent;
-  border-bottom: 1px solid $accent;
-  margin: 40px 0;
-  padding: 25px;
+  margin: 20px 0;
+  padding: 10px;
+  padding-left: 25px;
 
   @media ($phone) {
     padding-right: 0;
