--- a/themes/terminal/layouts/_default/index.html
+++ b/themes/terminal/layouts/_default/index.html
@@ -1,4 +1,23 @@
 {{ define "main" }}
+  
+  {{ $pages := union (where site.Pages "Type" "book") (where site.Pages "Type" "book") }}
+    {{ range last 1 $pages.ByLastmod }}
+    
+    <article class="post on-list">
+    
+    <h1 id="latest" style="font-size:24px">Latest Post</h1>
+    <span> Chapter {{ if .Params.section}}{{ .Params.section}}.{{end}}{{ if .Params.chapter}}{{ .Params.chapter}}{{ end }}, {{ if .Date }}{{ .Date.Format "2006 01 02" }}{{ end }}</span>
+    <h3 class="post-title"><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h3>
+    <div class="post-meta">
+    {{ with .Params.Author }}
+      <span class="post-author">{{ . }}</span>
+    {{ end }}
+    </div>
+    </article>
+ 
+ {{ end }}
+
+
 	{{ if .Content }}
 		<div class="index-content {{ if .Params.framed -}}framed{{- end -}}">
 			{{ .Content }}
