--- a/themes/terminal/layouts/partials/logo.html
+++ b/themes/terminal/layouts/partials/logo.html
@@ -1,5 +1,5 @@
 {{ if .IsHome }}
-<div class="logo">~:$</div>
+<div class="logo" style="overflow-wrap: none;">~$:</div>
 
 {{ else }}
 <a href="{{ if $.Site.Params.Logo.LogoHomeLink }}{{ $.Site.Params.Logo.LogoHomeLink }}{{else}}{{ $.Site.BaseURL }}{{ end }}">
